# cpp-opengl-renderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  README.md  asan-suppressions.txt  cpp-opengl-renderer.sln  cpp-opengl-renderer.vcxproj  sonar-project.properties  vcpkg.json
.devcontainer/: devcontainer.json
.devcontainer/debian11-amd64/: devcontainer.json
.devcontainer/debian11-amd64/scripts/: install-dependencies.sh
.devcontainer/debian12-devel/: devcontainer.json
.devcontainer/debian12-devel/scripts/: install-dependencies.sh
.devcontainer/nginx/: Dockerfile  devcontainer.json
.devcontainer/nginx-web/: devcontainer.json
.devcontainer/ubuntu20.04-amd64/: devcontainer.json
.devcontainer/ubuntu20.04-amd64/scripts/: install-dependencies.sh
.devcontainer/ubuntu24.04-devel/: devcontainer.json
.devcontainer/ubuntu24.04-devel/scripts/: install-dependencies.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .gitignore  build-dev.yml  build-qa.yml  build-release.yml  build-reusable.yml  checks.yml  codeql.yml  compile.yml  format-and-lint.yml  format.yml  format_and_lint.yml  pr.yml  release.yml
.scannerwork/: report-task.txt
android/rotatingtexturedcube/app/: build.gradle
android/rotatingtexturedcube/app/src/main/: AndroidManifest.xml
android/rotatingtexturedcube/app/src/main/cpp/: native-lib.cpp
android/rotatingtexturedcube/app/src/main/res/values/: strings.xml
android/rotatingtexturedcube/gradle/wrapper/: gradle-wrapper.properties
apps/: CMakeLists.txt
apps/opengl-viewer/: CMakeLists.txt  CmakeLists.txt  README.md
apps/opengl-viewer/include/: opengl-viewer-app.h  opengl-viewer.h
apps/opengl-viewer/src/: CMakeLists.txt  opengl-viewer.cpp
apps/opengl-viewer/web/: app.html
apps/rotating-textured-cube/: CMakeLists.txt  CmakeLists.txt  README.md
apps/rotating-textured-cube/include/: rotating-textured-cube.h
apps/rotating-textured-cube/src/: CMakeLists.txt  rotating-textured-cube.cpp
apps/rotating-textured-cube/web/: app.html
apps/textured-cube-with-imgui-integration/include/: textured-cube-with-imgui-integration.h
apps/textured-cube-with-imgui-integration/src/: CMakeLists.txt  textured-cube-with-imgui-integration.cpp
apps/textured-cube-with-imgui-integration/src/assets/shader/: coordinate.vert
assets/scenes/texture-cat/: texture-cat-plane.usda
assets/shader/core/: coordinate.frag  coordinate.vert  envMap.frag  envMap.vert  eq2CubeMap.frag  eq2CubeMap.vert  genBrdf.frag  genBrdf.vert  pbr.frag  pbr.vert
assets/shader/core330/: envMap.vert  eq2CubeMap.frag
assets/shader/es/: coordinate.frag  coordinate.vert  envMap.frag  envMap.vert  eq2CubeMap.frag  eq2CubeMap.vert  genBrdf.frag  genBrdf.vert  pbr.frag  pbr.vert
assets/shader/es20/: coordinate.frag  coordinate.vert
assets/web/html-js-wasm/: opengl-viewer.html  opengl_viewer.html  rotating-textured-cube.html  rotating_textured_cube.html
cmake/: CTestConfig.cmake  CustomFunctions.cmake  Packing.cmake
devops/scripts/bash/: compile_source_code.sh  format.sh  format_and_lint.sh
devops/scripts/ps1/: compile_source_code.ps1
docs/: coding-guidelines.md  creating-a-vcpkg-port.md  creating-vcpkg-ports.md  release.md
ios/RotatingTexturedCube/RotatingTexturedCube/: BridgingHeader.h  ContentView.swift  OpenGLWrapper.h  OpenGLWrapper.m  RotatingTexturedCube-Bridging-Header.h  RotatingTexturedCubeApp.swift
ios/RotatingTexturedCube/RotatingTexturedCube.xcodeproj/: project.pbxproj
ios/RotatingTexturedCube/RotatingTexturedCube.xcodeproj/project.xcworkspace/xcuserdata/marvingajek.xcuserdatad/: UserInterfaceState.xcuserstate
ios/RotatingTexturedCube/RotatingTexturedCubeTests/: RotatingTexturedCubeTests.swift
ios/RotatingTexturedCube/RotatingTexturedCubeUITests/: RotatingTexturedCubeUITests.swift  RotatingTexturedCubeUITestsLaunchTests.swift
ios/Triangle/Triangle/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.mm  Triangle.cpp  Triangle.h  ViewController.h  ViewController.mm  main.m
ios/Triangle/Triangle.xcodeproj/: project.pbxproj
ios/Triangle/Triangle.xcodeproj/project.xcworkspace/xcuserdata/marvingajek.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Triangle/TriangleTests/: TriangleTests.m
ios/Triangle/TriangleUITests/: TriangleUITests.m  TriangleUITestsLaunchTests.m
modules/: CMakeLists.txt
modules/camera/include/: fp-camera.h  fps-camera.h  icamera.h
modules/camera/src/: CMakeLists.txt
modules/camera/test/: CMakeLists.txt
modules/common/include/: result.h
modules/rendering/include/: gltf-objects.h  gltf-scene-importer.h  iscene-importer.h  ishader.h  model.h  opengl-shader.h  scene-importer.h  scene-uploader.h  texture-manager.h  usd-scene-importer.h  utils.h
modules/rendering/include/model/: aabb.h  material.h  mesh-primitive.h  mesh.h  node.h  scene.h  texture.h
modules/rendering/src/: CMakeLists.txt  external-tinygltf-impl.cpp  gltf-scene-importer.cpp  model.cpp  opengl-shader.cpp  scene-uploader.cpp  texture-manager.cpp  usd-scene-importer.cpp
modules/rendering/src/model/: aabb.cpp  material.cpp  mesh-primitive.cpp  mesh.cpp  node.cpp  scene.cpp  texture.cpp
modules/rendering/test/: CMakeLists.txt  entrypoint.cpp  gltf-scene-importer-test.cpp  opengl-shader-test.cpp  texture-manager-test.cpp  usd-scene-importer-test.cpp
modules/window/: CMakeLists.txt
modules/window/include/: glfw-context.h  glfw-window.h  iwindow.h
modules/window/src/: CMakeLists.txt  glfw-context.cpp  glfw-window.cpp
modules/window/test/: CMakeLists.txt  entrypoint.cpp  glfw-window-test.cpp
rotatingtexturedcube/: settings.gradle
rotatingtexturedcube/app/: build.gradle
rotatingtexturedcube/app/src/main/: AndroidManifest.xml
rotatingtexturedcube/app/src/main/cpp/: CMakeLists.txt
rotatingtexturedcube/app/src/main/res/values/: themes.xml
rotatingtexturedcube/app/src/main/res/values-night/: themes.xml
scripts/: build.ps1  build.sh  sonar-scan.sh  test-naming-conventions.sh
(+8 files in other folders)
